--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+<table align="center" bgcolor="#FDB927" bordercolor="#552582" >
+    <tr>
+        <td></td>
+        <td colspan="4" align="right"><h1><font color="#552582">Laker Fan Home Page</font></h1></td>
+    </tr>
+    <tr align="right">
+        <td width="420px"></td>
+        <td width="70px"><a href="index.html">Home</a></td>
+        <td width="120px"><a href="http://www.nba.com/lakers/">Lakers Home</a></td>
+        <td width="80px"><a href="http://www.nba.com/lakers/tickets?ls=nav_tickets">Tickets</a></td>
+        <td width="80px"><a href="http://www.nba.com/lakers/">Photos</a></td>
+    </tr>
+
+</div>
+</body>
+</html>
