Created roster.html and modified index.html to link to it

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <td width="420px"></td>
         <td width="70px"><a href="index.html">Home</a></td>
         <td width="120px"><a href="http://www.nba.com/lakers/">Lakers Home</a></td>
-        <td width="80px"><a href="http://www.nba.com/lakers/tickets?ls=nav_tickets">Tickets</a></td>
+        <td width="80px"><a href="roster.html">Roster</a></td>
         <td width="80px"><a href="http://www.nba.com/lakers/">Photos</a></td>
     </tr>
 </table>
