Modified index.html and roster.html to include images and added the image folder

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 
 		<p><a href="http://www.nba.com/lakers/news/160721russell-booker-usacamp">Source</a></p></td>
     </tr>
+        <tr>
+        <td align="center">
+            <img src="images/lakers1.jpg" alt="Player #51">
+            <p>(Ty Nowell/Lakers.com)</p>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
