--- a/roster.html
+++ b/roster.html
@@ -46,6 +46,12 @@
          </ul>   
         </td>
     </tr>
+    <tr>
+        <td align="center">
+            <img src="images/lakers2.jpg" alt="Player #51">
+            <p>(Ty Nowell/Lakers.com)</p>
+        </td>
+    </tr>
 </table>
 </body>
 </html>
