Corrected header titles for index.html and roster.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Laker Fan Home</title>
 </head>
 <body>
 <table align="center" bgcolor="#FDB927" bordercolor="#552582" >
