--- a/roster.html
+++ b/roster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Laker Roster 2016</title>
 </head>
 <body>
 <table align="center" bgcolor="#FDB927" bordercolor="#552582" >
