changed content to be a personal website and linked styles.css to the web pages

--- a/index.html
+++ b/index.html
@@ -1,55 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Laker Fan Home</title>
+	<title>Alex Perez</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<table align="center" bgcolor="#FDB927" bordercolor="#552582" >
-    <tr>
-        <td></td>
-        <td colspan="4" align="right"><h1><font color="#552582">Laker Fan Home Page</font></h1></td>
-    </tr>
-    <tr align="right">
-        <td width="420px"></td>
-        <td width="70px"><a href="index.html">Home</a></td>
-        <td width="120px"><a href="http://www.nba.com/lakers/">Lakers Home</a></td>
-        <td width="80px"><a href="roster.html">Roster</a></td>
-        <td width="80px"><a href="http://www.nba.com/lakers/">Photos</a></td>
-    </tr>
-</table>
-<div></div>
-<table align="center" bordercolor="#552582" >
-	<tr>
-        <td colspan="2" align="Left"><h3><font color="#552582">Laker latest news</font></h1></td>
-    </tr>
-    <tr align="left">
-    	<td width="785">
-    	<H4>Friends Russell and Booker Return to USA Camp as Participants</H4><p>Four years ago, D'Angelo Russell and Devin Booker stood on this same court, watching off to the side while dressed in matching blue polos and white shorts.</p>
-
-		<p>Now, they wear "USA" across their chests as they compete on the UNLV hardwood against some of the best players in the world.</p>
-
-		<p>In 2012, Russell and Booker were part of a group of high schoolers who were able to sit in on a U.S. National Team practice before it went off to London for the Olympics. This year, as members of the USA Select Team, the young guards were tasked with scrimmaging the current crop of American Olympians.</p>
-
-		<p>"When we were here four years ago, we always knew that we'd be in this situation," Booker said. "Obviously I didn't know it'd be this early, but we're blessed and fortunate enough of the opportunity."</p>
-
-		<p>Booker was just 15 at the time, but both he and Russell, then-16, were confident that they would someday be playing against the likes of Kobe Bryant and LeBron James, whom they watched with awe that day.</p>
-
-		<p>"It was unbelievable just seeing the level they were on," Booker said. "I couldn't imagine just playing against them. Now it's crazy that I got the chance to play against Kobe and LeBron and everybody like that."</p>
-
-		<p>Russell and Booker had actually met a year prior at the Nike Elite 100 Camp for some of the best high school players in the nation.</p>
-
-		<p>What began as an on-court rivalry rapidly evolved into an off-the-floor friendship that lasts to this day.</p>
-
-		<p>"We met each other at this camp and we dominated the camp," Russell said. "Every since then, everywhere we went we dominated together. Either he was on a different team or I was on a different team. You would hear his name somewhere and you would hear my name somewhere."</p>
-
-		<p><a href="http://www.nba.com/lakers/news/160721russell-booker-usacamp">Source</a></p></td>
-    </tr>
-        <tr>
-        <td align="center">
-            <img src="images/lakers1.jpg" alt="Player #51">
-            <p>(Ty Nowell/Lakers.com)</p>
-        </td>
-    </tr>
-</table>
+    <section>
+        <h2>Alex Perez</h2>
+        <h3>Analyst and Developer</h3>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about-me.html">About me</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </section>
+    <main class="main">
+        <article>
+            <h1>Analyzing problems and producing solutions</h1>
+            <p>Professional IT Systems Analyst; application vendor management; advanced troubleshooting skills; experienced in system development and implementation; leader; project coordinator; problem manager; communicate efficiently; liaison with business partners; assists in resolution of vendor problems; facilitates staff meetings; coordinates with multiple teams; ability to learn new systems quickly and trains new coworkers
+            </p>
+            <p>
+            Technical Skills: Nagios XI, Suse Linux 2011, warehouse management systems (WMS), warehouse control systems, vendor management, healthcare systems, HIPPA and PCI compliance, system development life cycle, Windows 2008 R2 servers, Computer proficiency in Windows XP/Vista/7, Microsoft Office Suite, PC Hardware, Nagios XI, Oracle SQL Developer, and Microsoft SQL Server
+            </p>
+        </article>
+    </main>  
 </body>
 </html>
